Add a measurements list page
Also adds
- A NavigationDrawer
- A more structured routing system

because the routing needed that

--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -4,5 +4,6 @@
   "correction": "Correctiefactor: {correction} {unit}",
   "result": "Resultaat: {result} {unit}",
   "patternRadius": "Straal van patroon",
-  "measurementHipBust": "Maat (heup of borst) in cm"
+  "measurementHipBust": "Maat (heup of borst) in cm",
+  "measurements": "Maten"
 }
