--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,5 +18,6 @@
     }
   },
   "patternRadius": "Radius from pattern",
-  "measurementHipBust": "Measurement (hip or bust) in cm"
+  "measurementHipBust": "Measurement (hip or bust) in cm",
+  "measurements": "Measurements"
 }
