Localize new strings

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,6 +18,7 @@
     }
   },
   "patternRadius": "Radius from pattern",
+  "radiusHelper": "Number indicated at a dot on the pattern",
   "measurementHipBust": "Measurement (hip or bust) in cm",
   "measurements": "Measurements",
   "loading": "Loading...",
@@ -25,5 +26,9 @@
   "newWord": "New",
   "measurement": "measurement",
   "cancel": "Cancel",
-  "save": "Save"
+  "save": "Save",
+  "saveMeasurement": "Save Measurement",
+  "errorEnterText": "Please enter some text",
+  "errorEnterNumber": "Please enter a number",
+  "nameThisMeasurement": "Name this measurement"
 }
